# Electrical-Simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  app  cmake_install.cmake  docker-compose.yaml
app.dSYM/Contents/Resources/DWARF/: app
circuit_sim/: package-lock.json  package.json
circuit_sim/public/: index.html
circuit_sim/src/: App.css  App.js
circuit_sim/src/component/: images.js  sim.js
circuit_sim_frontend/: package-lock.json  package.json
dependencies/include/glad/: glad.h
include/simulator/: Circuit.h  CircuitElement.h  capacitor.h  circuit.h  circuit_element.h  circuit_solver.h  circuithandler.h  current_source.h  dc_supply.h  directed_graph.h  disjoint_set.h  edge.h  inductor.h  node.h  node_manager.h  router.h  service_handler.hpp  simulator.h  vccs.h  voltage_source.h
js/: app.js  index.html  style.css
js/components/: CircuitComponent.js  circuit.js  components.js  nodes.js  wire.js
my-react-project/: package-lock.json
public/: Dockerfile  app.js  index.html  nginx.conf  style.css
public/client/: client.js
public/components/: circuit.js  componentTable.js  components.js  instructionBox.js  line.js  modifyParamsBox.js  nodes.js  staticComponent.js  wire.js
python_app/: CircuitSim.kv  main.py
python_app/src/: background.py  circuit.py  component.py  componentImage.py  component_image.py  draw.py  image.py  node.py  simulator.py  workspace.py
src/: capacitor.cpp  circuit.cpp  circuit_element.cpp  circuit_solver.cpp  circuithandler.cpp  current_source.cpp  directed_graph.cpp  edge.cpp  inductor.cpp  main.cpp  main_websocket.cpp  node.cpp  node_manager.cpp  router.cpp  service_handler.cpp  simulator.cpp  vccs.cpp  voltage_source.cpp  websocket.cpp
